# aegis

./: .gitignore  AGENTS.md  Cargo.toml  Makefile
crates/aegis-agentd/: Cargo.toml
crates/aegis-agentd/src/: main.rs
crates/aegis-core/: Cargo.toml  build.rs
crates/aegis-core/examples/: runtime_sdk_connector.rs
crates/aegis-core/migrations/: 0001_agent_base.sql
crates/aegis-core/src/: adaptive_whitelist.rs  amsi.rs  comms.rs  config.rs  container_mode.rs  containment.rs  correlation.rs  dispatch.rs  error.rs  feedback.rs  hashing.rs  health.rs  high_risk_ops.rs  ioc.rs  lib.rs  linux_tpm.rs  migrations.rs  ml.rs  orchestrator.rs  plugin_host.rs  process_tree.rs  recovery.rs  response_executor.rs  ring_buffer.rs  rule_vm.rs  runtime_sdk.rs  script_decode.rs  self_protection.rs  specialized_detection.rs  spill.rs  surface_monitor.rs  temporal.rs  transport_drivers.rs  upgrade.rs  wal.rs  windows_security.rs  yara.rs
crates/aegis-model/: Cargo.toml
crates/aegis-model/src/: lib.rs
crates/aegis-platform/: Cargo.toml
crates/aegis-platform/src/: lib.rs  linux.rs  macos.rs  mock.rs  traits.rs  windows.rs
crates/aegis-script/: Cargo.toml
crates/aegis-updater/: Cargo.toml
crates/aegis-updater/src/: main.rs
crates/aegis-watchdog/: Cargo.toml
crates/aegis-watchdog/src/: main.rs
docs/architecture/: aegis-architecture-design.md  aegis-sensor-architecture.md  aegis-sensor-linux-data-collection.md  aegis-sensor-windows-data-collection.md  aegis-transport-architecture.md
docs/archive/records/: README.md
docs/archive/records/pilot/: aegis-sensor-pilot-record.md
docs/archive/records/qe/: aegis-sensor-qe-matrix.md
docs/archive/records/release/: aegis-sensor-release-notes.md
docs/env/: 开发环境.md
docs/pilot/: aegis-sensor-pilot-record.md
docs/plan/: 2026-04-19-agent-completeness-closure.md  2026-04-19-agent-gap-closure.md  2026-04-19-agent-round3-closure.md  2026-04-19-linux-platform-runtime-closure.md  2026-04-19-linux-remaining-rd-plan.md  2026-04-19-linux-tpm-attestation-plan.md  aegis-sensor-rd-plan-audit.md  aegis-sensor-rd-plan-detailed.md  aegis-sensor-rd-plan.md  aegis-sensor-rd-status.md
docs/plan/sensor/: sensor-linux-attestation-verifier-plan.md  sensor-linux-container-delivery-plan.md  sensor-linux-deb-validation-plan.md  sensor-linux-device-control-plan.md  sensor-linux-packaging-release-plan.md  sensor-linux-plan.md  sensor-linux-runtime-sdk-delivery-plan.md  sensor-macos-plan.md  sensor-overall-plan.md  sensor-windows-amsi-strict-enforcement-plan.md  sensor-windows-auth-collection-plan.md  sensor-windows-block-release-decoupling-plan.md  sensor-windows-device-pipe-vss-behavior-plan.md  sensor-windows-hash-precreate-block-plan.md  sensor-windows-memory-injection-plan.md  sensor-windows-msi-packaging-plan.md  sensor-windows-network-deep-telemetry-plan.md  sensor-windows-plan.md  sensor-windows-preemptive-block-plan.md  sensor-windows-process-thread-module-plan.md  sensor-windows-protected-destination-rename-plan.md  sensor-windows-registry-protection-plan.md  sensor-windows-system-completion-plan.md  sensor-windows-validation-matrix.md
docs/plan/sensor/archive/: README.md
docs/qe/: aegis-sensor-qe-matrix.md
docs/release/: aegis-sensor-release-notes.md
docs/技术方案/: sensor-final技术解决方案.md  transport-final技术解决方案.md  总技术解决方案.md
packaging/linux/: Dockerfile.builder  build-bundle.sh  build-packages.sh  docker-compose.yaml  install.sh  manifest.json  uninstall.sh  validate.sh
packaging/linux-ebpf/: README.md  build.sh  manifest.json
packaging/linux-ebpf/src/: common.bpf.h  file.bpf.c  network.bpf.c  process.bpf.c
packaging/linux/device-control/: README.md  mount-monitor.conf
packaging/linux/device-control/udev/: 99-aegis-removable.rules
packaging/linux/device-control/usbguard/: rules.conf
packaging/linux/kubernetes/: README.md  daemonset-host-agent.yaml  sidecar-lite-pod.yaml
packaging/linux/runtime-sdk/: README.md  cloud-connector.aws-cloudtrail.contract.json  cloud-connector.azure-monitor.contract.json  cloud-connector.contract.json  cloud-connector.gcp-audit-log.contract.json  run-example.sh  runtime-event.sample.json  runtime-heartbeat.sample.json  runtime-policy.contract.json
packaging/linux/systemd/: aegis-agentd.service  aegis-watchdog.service
packaging/windows/: README.md  build-package.ps1  install.ps1  manifest.json  manifest.release.json  uninstall.ps1  validate.ps1  verify-release.ps1
packaging/windows/msi/: README.md
proto/agent/v1/: agent_service.proto
schemas/: event.fbs
scripts/: linux-container-validate.sh  linux-device-control-validate.sh  linux-ebpf-install.sh  linux-ebpf-sync.sh  linux-ebpf-uninstall.sh  linux-ebpf-verify.sh  linux-package-build.sh  linux-package-verify.sh  linux-tpm-attestation-verify.sh  linux-tpm-policy-verify.sh  linux-tpm-quote-verify.sh  linux-tpm-sealed-verify.sh  windows-build-driver.ps1  windows-configure-file-protection.ps1  windows-install-driver.ps1  windows-install-minifilter.ps1  windows-package-build.sh  windows-package-verify.sh  windows-query-file-events.ps1  windows-query-registry-events.ps1  windows-runtime-verify.ps1  windows-runtime-verify.sh  windows-scan-script-with-amsi.ps1  windows-sign-driver.ps1  windows-uninstall-driver.ps1
scripts/linux/: ebpf-install.sh  ebpf-verify.sh  tpm-attestation-bundle.sh
scripts/windows/: build-driver.ps1  build-minifilter.ps1  build-msi.ps1  configure-file-protection.ps1  configure-preemptive-block.ps1  configure-registry-protection.ps1  install-driver.ps1  install-minifilter.ps1  protect-process.ps1  query-driver-integrity.ps1  query-memory-regions.ps1  query-memory-snapshot.ps1  query-registry-events.ps1  query-script-events.ps1  rollback-registry.ps1  uninstall-minifilter.ps1
windows/driver/: AegisSensorKmod.inf  AegisSensorKmod.vcxproj
windows/driver/include/: aegis_windows_driver_protocol.h
windows/driver/src/: aegis_sensor_kmod.c
windows/minifilter/: AegisFileMonitor.inf  AegisFileMonitor.vcxproj
windows/minifilter/include/: aegis_file_minifilter_protocol.h
windows/minifilter/src/: aegis_file_minifilter.c
(+17 files in other folders)
