[package]
name = "aegis-agentd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aegis-core = { path = "../aegis-core" }
aegis-model = { path = "../aegis-model" }
