[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hkdf.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
wasmtime.workspace = true
aegis-model = { path = "../aegis-model" }
aegis-platform = { path = "../aegis-platform" }

[dev-dependencies]
wat.workspace = true
