[package]
name = "aegis-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
hkdf.workspace = true
keyring.workspace = true
libc.workspace = true
lz4_flex.workspace = true
prost.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true
wasmtime.workspace = true
zeroize.workspace = true
aegis-model = { path = "../aegis-model" }
aegis-platform = { path = "../aegis-platform" }

[dev-dependencies]
axum.workspace = true
wat.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_System_Memory"] }

[build-dependencies]
protoc-bin-vendored.workspace = true
tonic-build.workspace = true
