[package]
name = "aegis-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
aegis-model = { path = "../aegis-model" }
aegis-script = { path = "../aegis-script" }
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
