[package]
name = "aegis-updater"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aegis-core = { path = "../aegis-core" }
aegis-model = { path = "../aegis-model" }
serde_json.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
sha2.workspace = true
